--- a/3rd Project/EDA/Bike_sharing_day.ipynb
+++ b/3rd Project/EDA/Bike_sharing_day.ipynb
@@ -610,6 +610,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "weathersit\n",
+       "1    463\n",
+       "2    247\n",
+       "3     21\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.value_counts('weathersit')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
